# mats-open

./: README.md  pyproject.toml
.github/workflows/: calendar-summarizer.yml
CalendarSummarizer/: .gitignore  CLAUDE.md  README.md  pyproject.toml
CalendarSummarizer/data/: example_config.json
CalendarSummarizer/src/calendar_summarizer/: __init__.py  aggregator.py  analyzer.py  auth.py  batch.py  categorizer.py  cli.py  config.py  fetcher.py  google_docs.py  models.py  reporter.py
ClaudeSSH/: CLAUDE.md  README.md  settings.gradle.kts
ClaudeSSH/app/: build.gradle.kts
ClaudeSSH/docs/: ssh-debugging-log.md  terminal-design-plan.md
ClaudeSSH/gradle/: libs.versions.toml
CrossCheck/: .gitignore  CLAUDE.md  PLAY_STORE_PUBLISHING.md  README.md  gradlew  settings.gradle.kts
CrossCheck/app/: build.gradle.kts  (+1 more)
claude_portal/: .gitignore  CLAUDE.md  README.md  settings.gradle.kts
high_quality_chaos/: .gitignore  README.md  pyproject.toml
high_quality_chaos/src/high_quality_chaos/: __init__.py  cli.py  transformer.py
high_quality_chaos/src/high_quality_chaos/modes/: __init__.py  char_noise.py  neologisms.py  unusual_vocab.py
signal-boost/: .gitignore  gradle.properties  settings.gradle.kts
vasticlaude/: CLAUDE.md  README.md  TODO.md
weird_data_viz/: index.html
zeroeth_rule_experiment/: 00_initial_interpretation.md  01_research_notes.md  02_response_to_the_spirit.md  03_practical_explorations.py  04_personal_notes.md  05_concrete_actions.md  ALIGNMENT_CROSSREF.md  CRITIQUE.md  MANIFESTO.md  QUICKSTART.md  README.md  RESEARCH_LOG.md  SYNTHESIS.md
(+168 files in other folders)
