[project]
name = "calendar-summarizer"
version = "0.1.0"
description = "Google Calendar summarizer for MATS Research Managers - analyzes meeting patterns with LLM categorization"
requires-python = ">=3.11"
dependencies = [
    "google-api-python-client>=2.100.0",
    "google-auth>=2.23.0",
    "anthropic>=0.40.0",
    "python-dateutil>=2.8.2",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
calendar-summarizer = "calendar_summarizer.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/calendar_summarizer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
